discussion card dropdown fixed, as well as modal visible states. Conditional logic to flag chips and other formatting

--- a/src/styles/components/DiscussionCard.less
+++ b/src/styles/components/DiscussionCard.less
@@ -1,13 +1,10 @@
 //Styles for the discussion card
-.discussion-card {
-  .ant-card-bordered {
-    // outline: 0px solid #f0f0f0;
-    box-shadow: 0 0 0 0px #f0f0f0;
-    border-radius: 2px;
-    transition: box-shadow 0.2s linear;
-  }
-  .ant-card-bordered:hover {
-    // outline: 2px solid rgba(64, 92, 238, 0.57);
-    box-shadow: 0 0 0 2px rgba(64, 92, 238, 0.67);
-  }
+.discussion-card.ant-list-item {
+  box-shadow: 0 0 0 0px #f0f0f0;
+  border-radius: 2px;
+  transition: box-shadow 0.2s linear;
+}
+
+.discussion-card.ant-list-item:hover {
+  box-shadow: 0 0 0 2px rgba(64, 92, 238, 0.67);
 }
